--- a/views/clock.html
+++ b/views/clock.html
@@ -11,6 +11,7 @@
 
 <!-- Gemeinsames CSS -->
 <link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/clock.css">
 </head>
 
 <body>
