--- a/views/weather.html
+++ b/views/weather.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="../assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/weather.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
 <div id="weather-effects"></div>
 
 <main class="weather-card">
-    
+
     <!-- HEADER -->
     <div class="weather-header">
     <div class="temp-block">
